# opengl-test

./: OpenGL-test.cabal
src/: Main.hs
src/Graspagus/Shader/: Core.hs  Fragment.hs  Vertex.hs
